# workspace

./: .gitignore  LICENSE  README.md  fly.toml
.github/workflows/: deploy.yml  next-ci.yml  rust-ci.yml
next/: jest.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
next/src/app/: layout.tsx  page.tsx
next/src/components/hooks/: appContext.tsx  authContext.tsx  canvasContext.tsx  themeContext.tsx
next/src/components/panels/: leftPanel.tsx
next/src/components/primitives/: button.tsx  checkBox.tsx
next/src/grpc/: HealthServiceClientPb.ts  OrchestratorServiceClientPb.ts  health_pb.js  orchestrator_pb.d.ts  orchestrator_pb.js
next/src/grpc/geometry/: geometry_pb.js
next/src/grpc/reasoning/: reasoning_pb.js
next/src/grpc/shared/: HealthServiceClientPb.ts  LlmServiceClientPb.ts  common_pb.d.ts  common_pb.js  graph_pb.d.ts  graph_pb.js  health_pb.d.ts  health_pb.js  llm_pb.d.ts  llm_pb.js
rust/: Cargo.toml  Dockerfile  build.rs
rust/protos/: health.proto  orchestrator.proto
rust/protos/geometry/: geometry.proto
rust/protos/reasoning/: reasoning.proto
rust/protos/shared/: common.proto  graph.proto  health.proto  llm.proto
rust/src/: lib.rs  main.rs
rust/src/compute/: delaunay.rs  mod.rs  tests.rs  utils.rs
rust/src/compute/geometry/: mod.rs
rust/src/health/: mod.rs
rust/src/llm/: client.rs  gateway.rs  mod.rs  schema_validator.rs
rust/src/llm/providers/: anthropic.rs  mock.rs  mod.rs
rust/src/orchestrator/: factory.rs  manager.rs  mod.rs  tests.rs
rust/src/schemas/: algorithm_pipeline.schema.json  concept_graph.schema.json  entity_scene.schema.json  scenario.schema.json
rust/src/sys/: mod.rs
