[package]
name = "workspace-rust"
version = "0.1.0"
edition = "2021"

# For future WASM support
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-reflection = "0.14.2"
tonic-web = "0.14.2"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
tonic-build = "0.11"
chrono = "0.4.41"
protobuf-src = "2.1.0" # Add this

[dev-dependencies]
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
