[package]
name = "workspace-rust"
version = "0.1.0"
edition = "2021"

# For future WASM support
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "grpcserver"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
tonic-web = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parry3d = "0.25.3"
nalgebra = "0.34.1"

[build-dependencies]
tonic-build = "0.11"
chrono = "0.4.41"
protobuf-src = "2.1.0" # Add this

[dev-dependencies]
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
